--- a/src/style.css
+++ b/src/style.css
@@ -432,8 +432,23 @@ option {
     background: #333344;
 }
 
-.editor-card.deck-card {
-    border-color: var(--secondary-color);
+.editor-card.card-selected {
+    filter: grayscale(1);
+    opacity: 0.3;
+    cursor: default;
+    border-color: #f00 !important;
+}
+
+.card-tag {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    background: #f00;
+    color: #fff;
+    font-size: 0.6rem;
+    padding: 2px 4px;
+    border-radius: 3px;
+    font-weight: bold;
 }
 
 .editor-controls {
